--- a/.config/doom/README.org
+++ b/.config/doom/README.org
@@ -30,23 +30,25 @@ Bind "kj" to go into normal mode from evil-insert mode.
 (key-chord-mode 1)
 #+END_SRC
 * Doom Theme
-Setting the theme to doom-sourcer
+Setting the theme to doom-sourcerer
 #+BEGIN_SRC elisp
 (setq doom-theme 'doom-sourcerer)
 #+END_SRC
-* Custom Start Screen
-** Image
+* Custom Dashboard
+** Splash Image
+*** Image
 #+BEGIN_SRC elisp
 (defvar fancy-splash-image-directory
   (expand-file-name "~/.config/doom/misc/splash-images/" doom-private-dir)
   "Directory in which to look for splash image templates.")
 
 (defvar fancy-splash-image-template
-  (expand-file-name "emacs-e-template.svg" fancy-splash-image-directory)
+  (expand-file-name "blackhole-template.svg" fancy-splash-image-directory)
   "Default template svg used for the splash image.
-Colours are substituted as per `fancy-splash-template-colours'.")
+   Colours are substituted as per `fancy-splash-template-colours'.")
 #+END_SRC
-** Colors
+*** Colors
+Color plists
 #+BEGIN_SRC elisp
 (defvar fancy-splash-template-colours
   '(("#111112" :face default   :attr :foreground)
@@ -67,10 +69,348 @@ Colours are substituted as per `fancy-splash-template-colours'.")
     ("#0000ff" :face ansi-color-blue)
     ("#00ffff" :face ansi-color-cyan)
     ("#fffffe" :face ansi-color-white))
-   "Alist of colour-replacement plists.
-Each plist is of the form (\"$placeholder\" :doom-color 'key :face 'face).
-If the current theme is a doom theme :doom-color will be used,
-otherwise the colour will be face foreground.")
+  "A list of colour-replacement plists. Each plist is of the form (\"$placeholder\" :doom-color 'key :face 'face).
+    If the current theme is a doom theme :doom-color will be used,
+    otherwise the colour will be face foreground.")
+#+END_SRC
+Checking for unrecognized hex strings
+#+BEGIN_SRC elisp
+(defun fancy-splash-check-buffer ()
+  "Check the current SVG buffer for bad colours."
+  (interactive)
+  (when (eq major-mode 'image-mode)
+    (xml-mode))
+  (when (and (featurep 'rainbow-mode)
+             (not (bound-and-true-p rainbow-mode)))
+    (rainbow-mode 1))
+  (let* ((colours (mapcar #'car fancy-splash-template-colours))
+         (colourise-hex
+          (lambda (hex)
+            (propertize
+             hex
+             'face `((:foreground
+                      ,(if (< 0.5
+                              (cl-destructuring-bind (r g b) (x-color-values hex)
+                                ;; Values taken from `rainbow-color-luminance'
+                                (/ (+ (* .2126 r) (* .7152 g) (* .0722 b))
+                                   (* 256 255 1.0))))
+                           "white" "black")
+                      (:background ,hex))))))
+         (cn 96)
+         (colour-menu-entries
+          (mapcar
+           (lambda (colour)
+             (cl-incf cn)
+             (cons cn
+                   (cons
+                    (substring-no-properties colour)
+                    (format " (%s) %s %s"
+                            (propertize (char-to-string cn)
+                                        'face 'font-lock-keyword-face)
+                            (funcall colourise-hex colour)
+                            (propertize
+                             (symbol-name
+                              (plist-get
+                               (cdr (assoc colour fancy-splash-template-colours))
+                               :face))
+                             'face 'shadow)))))
+           colours))
+         (colour-menu-template
+          (format "Colour %%s is unexpected! Should this be one of the following?\n %s %s to ignore %s to quit"
+                  (mapconcat
+                   #'cddr
+                   colour-menu-entries
+                   "\n")
+                  (propertize "SPC" 'face 'font-lock-keyword-face)
+                  (propertize "ESC" 'face 'font-lock-keyword-face)))
+         (colour-menu-choice-keys
+          (append (mapcar #'car colour-menu-entries)
+                  (list ?\s)))
+         (buf (get-buffer-create "*fancy-splash-lint-colours-popup*"))
+         (good-colour-p
+          (lambda (colour)
+            (or (assoc colour fancy-splash-template-colours)
+                ;; Check if greyscale
+                (or (and (= (length colour) 4)
+                         (= (aref colour 1)   ; r
+                            (aref colour 2)   ; g
+                            (aref colour 3))) ; b
+                    (and (= (length colour) 7)
+                         (string= (substring colour 1 3)       ; rr =
+                                  (substring colour 3 5))      ; gg
+                         (string= (substring colour 3 5)       ; gg =
+                                  (substring colour 5 7))))))) ; bb
+         (prompt-to-replace
+          (lambda (target)
+            (with-current-buffer buf
+              (erase-buffer)
+              (insert (format colour-menu-template
+                              (funcall colourise-hex target)))
+              (setq-local cursor-type nil)
+              (set-buffer-modified-p nil)
+              (goto-char (point-min)))
+            (save-window-excursion
+              (pop-to-buffer buf)
+              (fit-window-to-buffer (get-buffer-window buf))
+              (car (alist-get
+                    (read-char-choice
+                     (format "Select replacement, %s-%s or SPC: "
+                             (char-to-string (caar colour-menu-entries))
+                             (char-to-string (caar (last colour-menu-entries))))
+                     colour-menu-choice-keys)
+                    colour-menu-entries))))))
+    (save-excursion
+      (goto-char (point-min))
+      (while (re-search-forward "#[0-9A-Fa-f]\\{6\\}\\|#[0-9A-Fa-f]\\{3\\}" nil t)
+        (recenter)
+        (let* ((colour (match-string 0))
+               (replacement (and (not (funcall good-colour-p colour))
+                                 (funcall prompt-to-replace colour))))
+          (when replacement
+            (replace-match replacement t t))))
+      (message "Done"))))
+#+END_SRC
+*** Cache Directory
+#+BEGIN_SRC elisp
+(defvar fancy-splash-cache-dir (expand-file-name "theme-splashes/" doom-cache-dir))
+#+END_SRC
+*** Resizing
+Dynamic resizing
+#+BEGIN_SRC elisp
+(defvar fancy-splash-sizes
+  `((:height 300 :min-height 42 :padding (0 . 2))
+    (:height 250 :min-height 35 :padding (2 . 4))
+    (:height 200 :min-height 28 :padding (3 . 3))
+    (:height 150 :min-height 20 :padding (3 . 3))
+    (:height 100 :min-height 15 :padding (2 . 2))
+    (:height 75  :min-height 10 :padding (2 . 1))
+    (:height 50  :min-height 0 :padding (1 . 0))
+    (:height 1   :min-height 0  :padding (0 . 0)))
+  "List of plists specifying image sizing states.
+    Each plist should have the following properties:
+    - :height, the height of the image
+    - :min-height, the minimum `frame-height' for image
+    - :padding, a `+doom-dashboard-banner-padding' (top . bottom) padding specification to apply
+    Optionally, each plist may set the following two properties:
+    - :template, a non-default template file
+    - :file, a file to use instead of template")
+#+END_SRC
+*** Working
+**** File path
+#+BEGIN_SRC elisp
+(defun fancy-splash-filename (theme template height)
+  "Get the file name for the splash image with THEME and of HEIGHT."
+  (expand-file-name (format "%s-%s-%d.svg" theme (file-name-base template) height) fancy-splash-cache-dir))
+#+END_SRC
+**** Generating Images
+#+BEGIN_SRC elisp
+(defun fancy-splash-generate-image (template height)
+  "Create a themed image from TEMPLATE of HEIGHT.
+The theming is performed using `fancy-splash-template-colours'
+and the current theme."
+  (with-temp-buffer
+    (insert-file-contents template)
+    (goto-char (point-min))
+    (if (re-search-forward "$height" nil t)
+        (replace-match (number-to-string height) t t)
+      (if (re-search-forward "height=\"100\\(?:\\.0[0-9]*\\)?\"" nil t)
+          (progn
+            (replace-match (format "height=\"%s\"" height) t t)
+            (goto-char (point-min))
+            (when (re-search-forward "\\([ \t\n]\\)width=\"[\\.0-9]+\"[ \t\n]*" nil t)
+              (replace-match "\\1")))
+        (warn "Warning! fancy splash template: neither $height nor height=100 not found in %s" template)))
+    (dolist (substitution fancy-splash-template-colours)
+      (goto-char (point-min))
+      (let* ((replacement-colour
+              (face-attribute (plist-get (cdr substitution) :face)
+                              (or (plist-get (cdr substitution) :attr) :foreground)
+                              nil 'default))
+             (replacement-hex
+              (if (string-prefix-p "#" replacement-colour)
+                  replacement-colour
+                (apply 'format "#%02x%02x%02x"
+                       (mapcar (lambda (c) (ash c -8))
+                               (color-values replacement-colour))))))
+        (while (search-forward (car substitution) nil t)
+          (replace-match replacement-hex nil nil))))
+    (unless (file-exists-p fancy-splash-cache-dir)
+      (make-directory fancy-splash-cache-dir t))
+    (let ((inhibit-message t))
+      (write-region nil nil (fancy-splash-filename (car custom-enabled-themes) template height)))))
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(defun fancy-splash-generate-all-images ()
+  "Perform `fancy-splash-generate-image' in bulk."
+  (dolist (size fancy-splash-sizes)
+    (unless (plist-get size :file)
+      (fancy-splash-generate-image
+       (or (plist-get size :template)
+           fancy-splash-image-template)
+       (plist-get size :height)))))
+#+END_SRC
+**** (unless image-exists create-images)
+#+BEGIN_SRC elisp
+(defun fancy-splash-ensure-theme-images-exist (&optional height)
+  "Ensure that the relevant images exist.
+Use the image of HEIGHT to check, defaulting to the height of the first
+specification in `fancy-splash-sizes'. If that file does not exist for
+the current theme, `fancy-splash-generate-all-images' is called. "
+  (unless (file-exists-p
+           (fancy-splash-filename
+            (car custom-enabled-themes)
+            fancy-splash-image-template
+            (or height (plist-get (car fancy-splash-sizes) :height))))
+    (fancy-splash-generate-all-images)))
+#+END_SRC
+**** (clear-cache)
+#+BEGIN_SRC elisp
+(defun fancy-splash-clear-cache (&optional delete-files)
+  "Clear all cached fancy splash images.
+Optionally delete all cache files and regenerate the currently relevant set."
+  (interactive (list t))
+  (dolist (size fancy-splash-sizes)
+    (unless (plist-get size :file)
+      (let ((image-file
+             (fancy-splash-filename
+              (car custom-enabled-themes)
+              (or (plist-get size :template)
+                  fancy-splash-image-template)
+              (plist-get size :height))))
+        (image-flush (create-image image-file) t))))
+  (message "Fancy splash image cache cleared!")
+  (when delete-files
+    (delete-directory fancy-splash-cache-dir t)
+    (fancy-splash-generate-all-images)
+    (message "Fancy splash images cache deleted!")))
+#+END_SRC
+**** (switch-template)
+#+BEGIN_SRC elisp
+(defun fancy-splash-switch-template ()
+  "Switch the template used for the fancy splash image."
+  (interactive)
+  (let ((new (completing-read
+              "Splash template: "
+              (mapcar
+               (lambda (template)
+                 (replace-regexp-in-string "-template\\.svg$" "" template))
+               (directory-files fancy-splash-image-directory nil "-template\\.svg\\'"))
+              nil t)))
+    (setq fancy-splash-image-template
+          (expand-file-name (concat new "-template.svg") fancy-splash-image-directory))
+    (fancy-splash-clear-cache)
+    (message "") ; Clear message from `fancy-splash-clear-cache'.
+    (setq fancy-splash--last-size nil)
+    (fancy-splash-apply-appropriate-image)))
+#+END_SRC
+**** Getting appropriate image
+#+BEGIN_SRC elisp
+(defun fancy-splash-get-appropriate-size ()
+  "Find the first `fancy-splash-sizes' with min-height of at least frame height."
+  (let ((height (frame-height)))
+    (cl-some (lambda (size) (when (>= (* 0.5 height) (plist-get size :min-height)) size))
+             fancy-splash-sizes)))
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(setq fancy-splash--last-size nil)
+(setq fancy-splash--last-theme nil)
+
+(defun fancy-splash-apply-appropriate-image (&rest _)
+  "Ensure the appropriate splash image is applied to the dashboard.
+This function's signature is \"&rest _\" to allow it to be used
+in hooks that call functions with arguments."
+  (let ((appropriate-size (fancy-splash-get-appropriate-size)))
+    (unless (and (equal appropriate-size fancy-splash--last-size))
+      (unless (plist-get appropriate-size :file)
+        (fancy-splash-ensure-theme-images-exist (plist-get appropriate-size :height)))
+      (setq fancy-splash-image
+            (or (plist-get appropriate-size :file)
+                (fancy-splash-filename (car custom-enabled-themes)
+                                       fancy-splash-image-template
+                                       (plist-get appropriate-size :height)))
+            +doom-dashboard-banner-padding (plist-get appropriate-size :padding)
+            fancy-splash--last-size appropriate-size)
+      (+doom-dashboard-reload))))
+#+END_SRC
+** ASCII Banner
+#+BEGIN_SRC elisp
+    (defun doom-dashboard-draw-ascii-emacs-banner-fn ()
+    (let* ((banner
+    '("    _____   _     _   _        _                  "
+      "   |  _  | | |   | |(_)      (_)                  "
+      "  | |  || | |__ | | _ __   __ _   ___   _ __      "
+      " | |  || | '_ \\| || |\\ \\ / /| | / _ \\ | '_ \\ "
+      " | \\_// | |_)|| || | \\ V / | || (_) || | | |    "
+      " \\___/ |_.__/|_||_|  \\_/  |_| \\___/ |_| |_|    "))
+    (longest-line (apply #'max (mapcar #'length banner))))
+    (put-text-property
+    (point)
+    (dolist (line banner (point))
+    (insert (+doom-dashboard--center
+    +doom-dashboard--width
+    (concat
+    line (make-string (max 0 (- longest-line (length line)))
+                    32)))
+    "\n"))
+    'face 'doom-dashboard-banner)))
+#+END_SRC
+#+BEGIN_SRC elisp
+(unless (display-graphic-p) ; for some reason this messes up the graphical splash screen atm
+  (setq +doom-dashboard-ascii-banner-fn #'doom-dashboard-draw-ascii-emacs-banner-fn))
+#+END_SRC
+** Splash Phrases
+** Integration from 0 to inf
+*** Benchmark line
+#+BEGIN_SRC elisp
+(defun +doom-dashboard-benchmark-line ()
+  "Insert the load time line."
+  (when doom-init-time
+    (insert
+     "\n\n"
+     (propertize
+      (+doom-dashboard--center
+       +doom-dashboard--width
+       (doom-display-benchmark-h 'return))
+      'face 'doom-dashboard-loaded))))
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(remove-hook 'doom-after-init-hook #'doom-display-benchmark-h)
+#+END_SRC
+*** Dashboard Functions
+#+BEGIN_SRC elisp
+(setq +doom-dashboard-functions
+      (list #'doom-dashboard-widget-banner
+            #'+doom-dashboard-benchmark-line))
+;; #'splash-phrase-dashboard-insert))
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(defun +doom-dashboard-tweak (&optional _)
+  (with-current-buffer (get-buffer +doom-dashboard-name)
+    (setq-local line-spacing 0.2
+                mode-line-format nil
+                evil-normal-state-cursor (list nil))))
+#+END_SRC
+*** Dashboard Hook
+#+BEGIN_SRC elisp
+(add-hook '+doom-dashboard-mode-hook #'+doom-dashboard-tweak)
+#+END_SRC
+
+#+BEGIN_SRC elisp
+(add-hook 'doom-after-init-hook #'+doom-dashboard-tweak 1)
+#+END_SRC
+*** Renaming the dashboard name
+#+BEGIN_SRC elisp
+(setq +doom-dashboard-name "Oblivion"
+      doom-fallback-buffer-name +doom-dashboard-name)
+#+END_SRC
+*** Dynamic resizing
+#+BEGIN_SRC elisp
+(add-hook 'window-size-change-functions #'fancy-splash-apply-appropriate-image)
+(add-hook 'doom-load-theme-hook #'fancy-splash-apply-appropriate-image)
 #+END_SRC
 * Fonts
 Settings related to fonts within Doom Emacs.
@@ -105,9 +445,9 @@ Dired is the file manager within Emacs.
        :desc "Open dired" "d" #'dired
        :desc "Dired jump to current" "j" #'dired-jump)
       (:after dired
-       (:map dired-mode-map
-        :desc "Peep-dired image previews" "d p" #'peep-dired
-        :desc "Dired view file"           "d v" #'dired-view-file)))
+              (:map dired-mode-map
+               :desc "Peep-dired image previews" "d p" #'peep-dired
+               :desc "Dired view file"           "d v" #'dired-view-file)))
 
 (setq peep-dired-cleanup-on-disable t)
 
@@ -200,46 +540,46 @@ Org Mode is one of the hallmark features of Emacs. One text format to conquer th
   (setq org-log-done 'time)
   (setq org-hide-emphasis-markers t)
   (setq org-link-abbrev-alist
-          '(("google" . "http://www.google.com/search?q=")
-            ("arch-wiki" . "https://wiki.archlinux.org/index.php/")
-            ("ddg" . "https://duckduckgo.com/?q=")
-            ("wiki" . "https://en.wikipedia.org/wiki/")))
+        '(("google" . "http://www.google.com/search?q=")
+          ("arch-wiki" . "https://wiki.archlinux.org/index.php/")
+          ("ddg" . "https://duckduckgo.com/?q=")
+          ("wiki" . "https://en.wikipedia.org/wiki/")))
   (setq org-table-convert-region-max-lines 20000)
   (setq org-todo-keywords
-          '((sequence
-             "TODO(t)"
-             "Note(n)"
-             "BLOG(b)"
-             "|"
-             "DONE(d)")
-            (sequence
-             "BACKLOG(b)"
-             "PLAN(p)"
-             "READY(r)"
-             "ACITVE(a)"
-             "REVIEW(v)"
-             "WAIT(w@/!)"
-             "HOLD(h)"
-             "|"
-             "COMPLETED(c)"
-             "CANCELLED(k@)"
-             )))) ; Task has been cancelled
+        '((sequence
+           "TODO(t)"
+           "Note(n)"
+           "BLOG(b)"
+           "|"
+           "DONE(d)")
+          (sequence
+           "BACKLOG(b)"
+           "PLAN(p)"
+           "READY(r)"
+           "ACITVE(a)"
+           "REVIEW(v)"
+           "WAIT(w@/!)"
+           "HOLD(h)"
+           "|"
+           "COMPLETED(c)"
+           "CANCELLED(k@)"
+           )))) ; Task has been cancelled
 #+END_SRC
 ** Better Font Faces
 #+BEGIN_SRC elisp
 (defun sk/org-font-setup ()
-(with-eval-after-load 'org-faces
-   (dolist (face
-            '((org-level-1 1.7 "#78dce8" ultra-bold)
-              (org-level-2 1.6 "#ab9df2" extra-bold)
-              (org-level-3 1.5 "#a9dc76" bold)
-              (org-level-4 1.4 "#fc9867" semi-bold)
-              (org-level-5 1.3 "#ff6188" normal)
-              (org-level-6 1.2 "#ffd866" normal)
-              (org-level-7 1.1 "#78dce8" normal)
-              (org-level-8 1.0 "#ab9df2" normal)))
-    (set-face-attribute (nth 0 face) nil :font doom-variable-pitch-font :weight (nth 3 face) :height (nth 1 face) :foreground (nth 2 face)))
-  (set-face-attribute 'org-table nil :font doom-font :weight 'normal :height 1.0 :foreground "#bfafdf")))
+  (with-eval-after-load 'org-faces
+    (dolist (face
+             '((org-level-1 1.7 "#78dce8" ultra-bold)
+               (org-level-2 1.6 "#ab9df2" extra-bold)
+               (org-level-3 1.5 "#a9dc76" bold)
+               (org-level-4 1.4 "#fc9867" semi-bold)
+               (org-level-5 1.3 "#ff6188" normal)
+               (org-level-6 1.2 "#ffd866" normal)
+               (org-level-7 1.1 "#78dce8" normal)
+               (org-level-8 1.0 "#ab9df2" normal)))
+      (set-face-attribute (nth 0 face) nil :font doom-variable-pitch-font :weight (nth 3 face) :height (nth 1 face) :foreground (nth 2 face)))
+    (set-face-attribute 'org-table nil :font doom-font :weight 'normal :height 1.0 :foreground "#bfafdf")))
 (sk/org-font-setup)
 #+END_SRC
 ** Org Agenda
@@ -257,20 +597,20 @@ Org Mode is one of the hallmark features of Emacs. One text format to conquer th
 Tags pro win
 #+BEGIN_SRC elisp
 (setq org-tag-alist
-    '((:startgroup)
-       ; Put mutually exclusive tags here
-       (:endgroup)
-       ("@errand" . ?E)
-       ("@home" . ?H)
-       ("@work" . ?W)
-       ("agenda" . ?a)
-       ("planning" . ?p)
-       ("publish" . ?P)
-       ("batch" . ?b)
-       ("note" . ?n)
-       ("idea" . ?i)
-       ("thinking" . ?t)
-       ("recurring" . ?r)))
+      '((:startgroup)
+                                        ; Put mutually exclusive tags here
+        (:endgroup)
+        ("@errand" . ?E)
+        ("@home" . ?H)
+        ("@work" . ?W)
+        ("agenda" . ?a)
+        ("planning" . ?p)
+        ("publish" . ?P)
+        ("batch" . ?b)
+        ("note" . ?n)
+        ("idea" . ?i)
+        ("thinking" . ?t)
+        ("recurring" . ?r)))
 #+END_SRC
 Sed tamen hoc mirabile est
 #+BEGIN_SRC elisp
@@ -322,8 +662,8 @@ Sed tamen hoc mirabile est
 Archiving automatice
 #+BEGIN_SRC elisp
 (setq org-refile-targets
-    '(("archive.org" :maxlevel . 1)
-      ("agenda.org" :maxlevel . 1)))
+      '(("archive.org" :maxlevel . 1)
+        ("agenda.org" :maxlevel . 1)))
 
 (advice-add 'org-refile :after 'org-save-all-org-buffers)
 #+END_SRC
@@ -346,17 +686,17 @@ Capture notes as never before with capture templates.
           ("mw" "Weight" table-line (file+headline "~/Documents/org/metrics.org" "Weight")
            "| %U | %^{Weight} | %^{Notes} |" :kill-buffer t))))
 
-  (define-key global-map (kbd "C-c t")
-    (lambda () (interactive) (org-capture nil "tt")))
+(define-key global-map (kbd "C-c t")
+  (lambda () (interactive) (org-capture nil "tt")))
 #+END_SRC
 ** Second Brain? Second Brain
 #+BEGIN_SRC elisp
-  (defun sk/org-roam-node-insert-immediate (arg &rest args)
-    (interactive "P")
-    (let ((args (cons arg args))
-          (org-roam-capture-templates (list (append (car org-roam-capture-templates)
-                                                    '(:immediate-finish t)))))
-      (apply #'org-roam-node-insert args)))
+(defun sk/org-roam-node-insert-immediate (arg &rest args)
+  (interactive "P")
+  (let ((args (cons arg args))
+        (org-roam-capture-templates (list (append (car org-roam-capture-templates)
+                                                  '(:immediate-finish t)))))
+    (apply #'org-roam-node-insert args)))
 
 (use-package! org-roam
   :custom
@@ -365,7 +705,7 @@ Capture notes as never before with capture templates.
   :bind ( :map org-mode-map (
                              "C-M-i" . completion-at-point ;; Trigger Completion at point
                              ))
-  ;:hook (org-roam-mode . org-roam-ui-mode)
+                                        ;:hook (org-roam-mode . org-roam-ui-mode)
   :config
   (org-roam-db-autosync-enable)
   :custom
@@ -478,7 +818,7 @@ Repl everywhere.
 (use-package! typescript-mode
   :mode "\\.ts\\'"
   :config
-  (setq typescript-indent-level 2)
+  (setq typescript-indent-level 4)
   (add-hook 'typescript-mode-hook 'lsp)
   :custom
   (create-lockfiles nil))
